packages/astro/e2e/fixtures/errors/src/components/solid/SolidRuntimeError.jsx
import { h } from 'solid-js/web';

export default function SolidRuntimeError({shouldThrow = true}) {
  if (shouldThrow) throw new Error('SolidRuntimeError')
  return <div>I shouldn’t be here</div>;
}
